--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
@@ -46,15 +46,13 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-//    compile 'com.trello:rxlifecycle2:+'
+    //    compile 'com.trello:rxlifecycle2:+'
     compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
-
     // If you want pre-written Activities and Fragments you can subclass as providers
-//    compile 'com.trello:rxlifecycle-components:+'
+    //    compile 'com.trello:rxlifecycle-components:+'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-
     compile 'com.github.bumptech.glide:glide:+'
 }
