--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
     <uses-permission android:name="com.example.luoshuimumu.TopNews.read"/>
 
     <application
+
         android:allowBackup="true"
-        android:label=""
+        android:label="mvvm一个"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
